fix: adjust white spacing, add body react icon background

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,3 +3,19 @@
     padding-block: 1.5rem  1rem;
     align-items: center;
 }
+
+.primary-header-logo{
+    width: 40px;
+    aspect-ratio: 1;
+}
+
+.logo-link{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+}
+
+.logo-text{
+    font-size: var(--fs-logo-text);    
+}
