--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 :root{
 
- --clr-react-logo-aqua-blue:#61DBFB;
+ --clr-accent-blue-400:#61DBFB;
 
   --clr-neutral-100: #ffffff;
   --clr-neutral-200: #f8fafc;
@@ -18,6 +18,7 @@
 
   --body-fg: light-dark(#0f172a, var(--clr-neutral-250));
   --body-bg: light-dark(var(--clr-neutral-200), var(--clr-neutral-700));
+  --body-pseudo-bg-url:url("../assets/react.svg");
   --header-bg: light-dark(var(--clr-neutral-100), var(--clr-neutral-800));
   --section-bg: light-dark(var(--clr-neutral-100), var(--clr-neutral-800));
   
@@ -57,7 +58,7 @@
   --fs-nav: var(--fs-300);
   --fs-footer: var(--fs-200);
   --fs-btn: var(--fs-300);
-  --fs-logo-small-text: var(--fs-50);
+  --fs-logo-text: var(--fs-500);
   --fs-primary-footer-copyright-text: var(--fs-100);
   --fs-table: var(--fs-200);
 
@@ -73,7 +74,7 @@
     --fs-secondary-heading: var(--fs-700);
     --fs-modal-header: var(--fs-650);
     --fs-body: var(--fs-500);
-    --fs-logo-small-text: var(--fs-100);
+    --fs-logo-text: var(--fs-600);
     --fs-table: var(--fs-400);
   }
 }
@@ -94,6 +95,7 @@
 
     :root{
         --shadow: none;
+        /* --body-pseudo-bg-url:url("../assets/reactjs-icon-2.svg"); */
     }
 }
 /* =====================
@@ -176,6 +178,30 @@ body {
   color: var(--body-fg);
   background-color: var(--body-bg);
   line-height: 1.5;
+  position: relative;
+  isolation: isolate;
+  overflow-x: hidden;
+}
+
+body::after{
+  content: "";
+  position:absolute;
+  display: block;
+  inset: 0;
+  z-index:-1;
+  height: 100%;
+  background: var(--body-pseudo-bg-url);
+  background-repeat: no-repeat;
+  background-size: cover; 
+  left:70%;
+  top:40%; 
+  
+}
+@media(min-width: 50em){
+  body::after{
+    left: 85%;
+    top: 35%;
+  }
 }
 
 .primary-header{
@@ -187,9 +213,17 @@ select {
 }
 
 main {
-  padding-block: 1rem 3rem;
+  padding-block: 2rem 3rem;  
 }
 
+.fun-facts-list{
+  margin-block-start: 1.5rem;
+}
+
+.fun-facts-list>li::marker {
+color: var(--clr-accent-blue-400);
+font-size: var(--fs-600);
+}
 
 /* =========================== 
 4. UTILITY CLASSES 
@@ -202,7 +236,7 @@ main {
   font-size: var(--fs-secondary-heading);
 }
 
-.text-accent-400 {
+.text-accent-blue-400 {
   color: var(--clr-accent-blue-400);
 }
 
